adds quizes files and fixes minor mistakes

--- a/app/templates/decks.html
+++ b/app/templates/decks.html
@@ -78,7 +78,7 @@
       <div class="deck-header">
 
         <div class="deck-header-title">
-          <a href="/deck">
+          <a href="/">
             <img src="/static/svg/back.svg" width="18" height="18" alt="Back Icon" />
           </a>
           <h2>All Decks</h2>
