--- a/app/templates/decks.html
+++ b/app/templates/decks.html
@@ -85,8 +85,8 @@
         </div>
 
         <div class="actions">
-          <button id="new-deck-btn">Create deck</button>
-          <button id="delete-all-btn">Delete All Decks</button>
+          <button class="btn" id="new-deck-btn">Create deck</button>
+          <button class="btn" id="delete-all-btn">Delete All Decks</button>
         </div>
       </div>
 
