--- a/app/static/css/deck-style.css
+++ b/app/static/css/deck-style.css
@@ -8,6 +8,14 @@ main {
   flex: 1;
 }
 
+#start-quiz {
+    background-color: #373669;
+    color: white;
+    text-decoration: none;
+    margin: 0;
+    font-size: 0.80em;
+}
+
 .container {
   margin: auto;
   width: 100%;
@@ -90,3 +98,4 @@ main > .container > h2 {
   align-items: center;
   gap: 0.5em;
 }
+
