--- a/app/templates/quizzes_results.html
+++ b/app/templates/quizzes_results.html
@@ -5,10 +5,8 @@
     <title>Quiz Results of {{ deck }}</title>
     <link rel="stylesheet" href="/static/css/common.css" />
     <link rel="stylesheet" href="/static/css/quizzes-results-style.css" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
     <!-- <link -->
     <!--   href="https://fonts.googleapis.com/icon?family=Material+Icons" -->
     <!--   rel="stylesheet" -->
@@ -67,7 +65,7 @@
                 <!-- put icon here  -->
               </div>
               <a class="result-link" href="/deck/{{ deck }}/result/{{ quiz_id }}">
-                <span class="material-icons material-symbols-outlined"> arrow_outward </span>
+                <span class="material-symbols-outlined"> arrow_outward </span>
               </a>
             </div>
             {% endfor %}
