--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -171,9 +171,20 @@ input[type="text"] {
 }
 
 .btn {
+    display: flex;
+
+    align-items: center;
+    justify-content: center;
+
+    gap: 0.5em;
+    color: white;
+
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0.5em 1em;
     border-radius: 0.5em;
     font-weight: bold;
     cursor: pointer;
+}
+.btn > p {
+    margin: 0;
 }
