--- a/app/templates/decks.html
+++ b/app/templates/decks.html
@@ -1,162 +1,263 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Your Decks</title>
+    <link rel="stylesheet" href="/static/css/common.css" />
+    <link rel="stylesheet" href="/static/css/decks-style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Decks</title>
-  <link rel="stylesheet" href="/static/css/common.css" />
-  <link rel="stylesheet" href="/static/css/decks-style.css" />
-</head>
+  <body>
+    <header>
+      <div class="container">
+        <a id="logo" href="/">
+          <img
+            src="/static/svg/stack.svg"
+            alt="Stack Icon"
+            width="48"
+            height="48"
+          />
+          <h1>Recallr</h1>
+        </a>
 
-<body>
-  <header>
-    <div class="container">
-      <a id="logo" href="/">
-        <img src="/static/svg/stack.svg" alt="Stack Icon" width="48" height="48" />
-        <h1>Recallr</h1>
-      </a>
+        <nav>
+          <ul>
+            <li><a href="/help">Help</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-      <nav>
-        <ul>
-          <li><a href="/help">Help</a></li>
-        </ul>
-      </nav>
+    <div class="modal" id="delete-all-modal">
+      <div class="container">
+        <form id="delete-all-form">
+          <h2>Delete All Decks</h2>
+          <div class="input-group">
+            <p>Are you sure you want to delete all decks?</p>
+          </div>
+          <div class="form-actions">
+            <button
+              type="button"
+              id="close-delete-all-btn"
+              class="cancel-button"
+            >
+              Cancel
+            </button>
+
+            <button
+              type="submit"
+              id="submit-delete-all-btn"
+              class="confirm-button"
+            >
+              Delete
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
-  </header>
 
-  <div class="modal" id="delete-all-modal">
-    <div class="container">
-      <form id="delete-all-form">
-        <h2>Delete All Decks</h2>
-        <div class="input-group">
-          <p>Are you sure you want to delete all decks?</p>
-        </div>
-        <div class="form-actions">
-          <button type="button" id="close-delete-all-btn" class="cancel-button">
-            Cancel
-          </button>
-
-          <button type="submit" id="sumbit-delete-all-btn" class="confirm-button">
-            Delete
-          </button>
-        </div>
-      </form>
+    <div class="modal" id="create-deck-modal">
+      <div class="container">
+        <form action="/deck" method="POST">
+          <h2>Create a new deck</h2>
+          <div class="input-group">
+            <label for="name">Deck Name</label>
+            <p class="hint">
+              Ensure that there are no special characters in the deck name. like
+              <code>[</code>, <code>]</code>, <code>&lt;</code>,
+              <code>&gt;</code>, <code>/</code>, <code>?</code>, <code>\</code>,
+              <code>,</code>, <code>:</code>, <code>*</code>,
+              <code>SPACE</code>, <code>|</code> <code>&amp;</code>,
+              <code>+</code>.
+            </p>
+            <input
+              type="text"
+              name="name"
+              id="input-deck-name"
+              placeholder="Enter a name for your deck"
+            />
+          </div>
+          <ul id="create-deck-messages" class="m-0"></ul>
+          <div class="form-actions">
+            <button
+              type="button"
+              id="close-create-deck-btn"
+              class="cancel-button"
+            >
+              Cancel
+            </button>
+            <button
+              type="submit"
+              id="submit-create-deck-btn"
+              class="confirm-button"
+            >
+              Create
+            </button>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
 
-  <div class="modal" id="create-deck-modal">
-    <div class="container">
-      <form action="/deck" method="POST">
-        <h2>Create a new deck</h2>
-        <div class="input-group">
-          <label for="name">Deck Name</label>
-          <p class="hint">
-            Ensure that there are no special characters in the deck name. like
-            <code>[</code>, <code>]</code>, <code><</code>, <code>></code>,
-            <code>/</code>, <code>?</code>, <code>\</code>, <code>,</code>,
-            <code>:</code>, <code>*</code>, <code>SPACE</code>,
-            <code>|</code>.
-          </p>
-          <input type="text" name="name" id="input-deck-name" placeholder="Enter a name for your deck" />
-        </div>
-        <div class="form-actions">
-          <button type="button" id="close-create-deck-btn" class="cancel-button">
-            Cancel
-          </button>
-          <button type="submit" id="sumbit-create-deck-btn" class="confirm-button">
-            Create
-          </button>
-        </div>
-      </form>
-    </div>
-  </div>
+    <main>
+      <div class="container">
+        <div class="deck-header">
+          <div class="deck-header-title">
+            <a href="/">
+              <img
+                src="/static/svg/back.svg"
+                width="18"
+                height="18"
+                alt="Back Icon"
+              />
+            </a>
+            <h2>All Decks</h2>
+          </div>
 
-  <main>
-
-    <div class="container">
-      <div class="deck-header">
-
-        <div class="deck-header-title">
-          <a href="/">
-            <img src="/static/svg/back.svg" width="18" height="18" alt="Back Icon" />
-          </a>
-          <h2>All Decks</h2>
+          <div class="actions">
+            <button class="btn" id="new-deck-btn">Create deck</button>
+            <button class="btn" id="delete-all-btn">Delete All Decks</button>
+          </div>
         </div>
 
-        <div class="actions">
-          <button class="btn" id="new-deck-btn">Create deck</button>
-          <button class="btn" id="delete-all-btn">Delete All Decks</button>
+        <div class="container" id="decks">
+          {% for deck in decks %}
+          <div class="deck">
+            <a href="/deck/{{ deck }}"> {{ deck }} </a>
+          </div>
+          {% endfor %}
         </div>
       </div>
+    </main>
 
-      <div class="container" id="decks">
-        {% for deck in decks %}
-        <div class="deck">
-          <a href="/deck/{{ deck }}"> {{ deck }} </a>
-        </div>
-        {% endfor %}
-      </div>
-  </main>
+    <footer>
+      <p>&copy; 2025 Recallr | All rights reserved</p>
+    </footer>
 
-  <footer>
-    <p>&copy; 2025 Recallr | All rights reserved</p>
-  </footer>
+    <script>
+      const messages = new Set();
+      const speicalCharactersPattern = /\w*[\[\]<>\/\?\\:\*\|\s\&\+]+\w*/;
 
-  <script>
-    // Forms
-    const deleteAllForm = document.querySelector("#delete-all-form");
+      function updateMessages(messagesContainer) {
+        if (messages.size == 0) {
+          messagesContainer.innerHTML = "";
+          return;
+        }
+        if (messagesContainer.childElementCount != messages.size) {
+          messagesContainer.innerHTML = "";
+          for (const message of messages) {
+            const listElement = document.createElement("li");
+            listElement.innerText = message;
+            messagesContainer.appendChild(listElement);
+          }
+        }
+      }
 
-    // Modals
-    const createDeckModal = document.querySelector("#create-deck-modal");
-    const deleteAllModal = document.querySelector("#delete-all-modal");
+      function updateMessages(messagesContainer) {
+        if (messages.size == 0) {
+          messagesContainer.innerHTML = "";
+          return;
+        }
 
-    // opening modal buttons
-    const createDeckBtn = document.querySelector("#new-deck-btn");
-    const deleteAllBtn = document.querySelector("#delete-all-btn");
+        if (messagesContainer.childElementCount != messages.size) {
+          messagesContainer.innerHTML = "";
+          for (const message of messages) {
+            const listElement = document.createElement("li");
+            listElement.innerText = message;
+            messagesContainer.appendChild(listElement);
+          }
+        }
+      }
 
-    // create deck modal buttons
-    const closeBtnCreateDeckModal = document.querySelector(
-      "#close-create-deck-btn",
-    );
+      // Forms
+      const deleteAllForm = document.querySelector("#delete-all-form");
+      const createDeckNameInput = document.querySelector("#input-deck-name");
+      const createDeckMessages = document.querySelector(
+        "#create-deck-messages",
+      );
+      const createDeckSubmitBtn = document.querySelector(
+        "#submit-create-deck-btn",
+      );
 
-    // delete all modal buttons
-    const closeBtnDeleteAllModal = document.querySelector(
-      "#close-delete-all-btn",
-    );
-    const sumbitBtnDeleteAllModal = document.querySelector(
-      "#sumbit-delete-all-btn",
-    );
+      createDeckNameInput.addEventListener("input", (e) => {
+        const inputValue = e.target.value.trim();
 
-    // close the modals
-    closeBtnCreateDeckModal.addEventListener("click", () => {
-      createDeckModal.style.display = "none";
-    });
-    closeBtnDeleteAllModal.addEventListener("click", () => {
-      deleteAllModal.style.display = "none";
-    });
+        const emptyDeckNameMessage = "Deck name cannot be empty";
+        if (inputValue.length == 0) {
+          messages.add(emptyDeckNameMessage);
+        } else {
+          messages.delete(emptyDeckNameMessage);
+        }
+        updateMessages(createDeckMessages);
 
-    // opens the modals
-    createDeckBtn.addEventListener("click", () => {
-      createDeckModal.style.display = "flex";
-      document.querySelector("#input-deck-name").value = "";
-    });
-    deleteAllBtn.addEventListener("click", () => {
-      deleteAllModal.style.display = "flex";
-    });
+        const specialCharactersMessage =
+          "Deck name cannot contain special characters";
+        if (speicalCharactersPattern.test(inputValue)) {
+          messages.add(specialCharactersMessage);
+        } else {
+          messages.delete(specialCharactersMessage);
+        }
 
-    deleteAllForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const response = await fetch("/deck", {
-        method: "DELETE",
+        if (messages.size == 0) {
+          createDeckSubmitBtn.disabled = false;
+        }
+        else {
+          createDeckSubmitBtn.disabled = true;
+        }
+
+
+        updateMessages(createDeckMessages);
       });
 
-      if (response.ok) {
-        window.location.reload();
-        return;
-      }
-    });
-  </script>
-</body>
+      // Modals
+      const createDeckModal = document.querySelector("#create-deck-modal");
+      const deleteAllModal = document.querySelector("#delete-all-modal");
 
+      // opening modal buttons
+      const createDeckBtn = document.querySelector("#new-deck-btn");
+      const deleteAllBtn = document.querySelector("#delete-all-btn");
+
+      // create deck modal buttons
+      const closeBtnCreateDeckModal = document.querySelector(
+        "#close-create-deck-btn",
+      );
+
+      // delete all modal buttons
+      const closeBtnDeleteAllModal = document.querySelector(
+        "#close-delete-all-btn",
+      );
+      const submitBtnDeleteAllModal = document.querySelector(
+        "#submit-delete-all-btn",
+      );
+
+      // close the modals
+      closeBtnCreateDeckModal.addEventListener("click", () => {
+        createDeckModal.style.display = "none";
+      });
+      closeBtnDeleteAllModal.addEventListener("click", () => {
+        deleteAllModal.style.display = "none";
+      });
+
+      // opens the modals
+      createDeckBtn.addEventListener("click", () => {
+        createDeckModal.style.display = "flex";
+        document.querySelector("#input-deck-name").value = "";
+      });
+      deleteAllBtn.addEventListener("click", () => {
+        deleteAllModal.style.display = "flex";
+      });
+
+      deleteAllForm.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const response = await fetch("/deck", {
+          method: "DELETE",
+        });
+
+        if (response.ok) {
+          window.location.reload();
+          return;
+        }
+      });
+    </script>
+  </body>
 </html>
